more work on site

--- a/site/template.htm
+++ b/site/template.htm
@@ -5,9 +5,11 @@
 <head>
   <title>Template Anything - turn any git repository into a project template</title>
 
-</head>
-<body>
+  <!-- jf-header-css -->
 
+</head>
+<body class='jf-header-static'>
+<!-- jf-header-html -->
 <div class='project-banner'>
   template-anything
   <small>turn any git repository into a project template</small>
