site… pygments yay

--- a/site/template.htm
+++ b/site/template.htm
@@ -4,25 +4,27 @@
 
 <head>
   <title>Template Anything - turn any git repository into a project template</title>
+  <link rel='stylesheet' href='main.css' type='text/css'></link>
 
   <!-- jf-header-css -->
-
 </head>
 <body class='jf-header-static'>
-<!-- jf-header-html -->
-<div class='project-banner'>
-  template-anything
-  <small>turn any git repository into a project template</small>
-</div>
+  <!-- jf-header-html -->
+  
+  <div class='project-banner'>
+    template-anything
+    <small>turn any git repository into a project template</small>
+  </div>
 
-<div class='sidebar'>
-{{ nav }}
-</div>
+  <div class='sidebar'>
+    {{ nav }}
+  </div>
 
-<div class='main'>
-{{ content }}
-</div>
+  <div class='main'>
+    {{ content }}
+  </div>
 
+  <!-- jf-analytics -->
 </body>
 
 </html>
